welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: '(' expected but identifier found.
  if aSmile==true &&  bSmile== true||aSmile== false && bSmile== false{
     ^